--- a/.github/workflows/deploy-with-login.yml
+++ b/.github/workflows/deploy-with-login.yml
@@ -1,6 +1,9 @@
 name: Remote Deploy with Interactive Login
 on:
-  workflow_dispatch: # Allows the curl trigger with specific inputs
+  push:
+    branches:
+      - main
+  workflow_dispatch: # Allows manual trigger with specific inputs
 
 jobs:
   deploy:
