Add trigger-deploy.sh to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ $RECYCLE.BIN/
 # Local environment variables
 .env
 
+# Local scripts (not part of Salesforce project)
+trigger-deploy.sh
+
 # Python Salesforce Functions
 **/__pycache__/
 **/.venv/
