--- a/.github/workflows/deploy-with-login.yml
+++ b/.github/workflows/deploy-with-login.yml
@@ -1,6 +1,15 @@
 name: Remote Deploy with Interactive Login
 on:
   workflow_dispatch: # Allows the curl trigger with specific inputs
+    inputs:
+      sf_access_token:
+        description: 'Salesforce Access Token (from authenticated org)'
+        required: false
+        type: string
+      sf_instance_url:
+        description: 'Salesforce Instance URL (e.g., https://login.salesforce.com)'
+        required: false
+        type: string
 
 jobs:
   deploy:
@@ -12,25 +21,58 @@ jobs:
       - name: Install Salesforce CLI
         run: npm install -g @salesforce/cli
 
-      - name: Start Interactive Login
+      - name: Authenticate to Salesforce
         id: login
         timeout-minutes: 10
         run: |
           echo "=========================================="
-          echo "🔐 DEVICE LOGIN REQUIRED"
+          echo "🔐 Salesforce Authentication"
           echo "=========================================="
-          echo "Please watch the logs below for the Device Login code!"
-          echo "You will need to visit the URL and enter the code to authenticate."
-          echo ""
-          # This command will output a URL (https://login.salesforce.com/setup/connect) 
-          # and a 8-digit code.
-          sf org login device --alias targetOrg --instance-url https://login.salesforce.com || {
-            echo "❌ Device login failed or timed out"
-            echo "Please check the logs above for the device code and complete authentication"
-            exit 1
-          }
-          echo ""
-          echo "✅ Authentication successful!"
+          
+          # Check if credentials provided via workflow inputs (from local authentication)
+          if [ -n "${{ inputs.sf_access_token }}" ] && [ -n "${{ inputs.sf_instance_url }}" ]; then
+            echo "Using credentials from workflow input (local authentication)..."
+            sf org login access-token \
+              --alias targetOrg \
+              --instance-url "${{ inputs.sf_instance_url }}" \
+              --access-token "${{ inputs.sf_access_token }}" || {
+              echo "❌ Authentication with provided credentials failed"
+              exit 1
+            }
+            echo "✅ Authentication successful using provided credentials!"
+          # Check if access token is provided via secrets (fallback)
+          elif [ -n "${{ secrets.SF_ACCESS_TOKEN }}" ] && [ -n "${{ secrets.SF_INSTANCE_URL }}" ]; then
+            echo "Using GitHub Secrets (Access Token) for authentication..."
+            sf org login access-token \
+              --alias targetOrg \
+              --instance-url "${{ secrets.SF_INSTANCE_URL }}" \
+              --access-token "${{ secrets.SF_ACCESS_TOKEN }}" || {
+              echo "❌ Authentication with access token failed"
+              exit 1
+            }
+            echo "✅ Authentication successful using Access Token!"
+          else
+            echo "GitHub Secrets not configured. Using device login..."
+            echo "Please watch the logs below for the Device Login code!"
+            echo "You will need to visit the URL and enter the code to authenticate."
+            echo ""
+            echo "To use automatic authentication (no device login needed), set these GitHub Secrets:"
+            echo "  - SF_ACCESS_TOKEN: Your Salesforce access token"
+            echo "  - SF_INSTANCE_URL: Your instance URL (e.g., https://login.salesforce.com)"
+            echo ""
+            echo "You can get your access token after logging in locally with:"
+            echo "  sf org display --target-org <alias> --json | jq -r '.result.accessToken'"
+            echo ""
+            # This command will output a URL (https://login.salesforce.com/setup/connect) 
+            # and a 8-digit code.
+            sf org login device --alias targetOrg --instance-url https://login.salesforce.com || {
+              echo "❌ Device login failed or timed out"
+              echo "Please check the logs above for the device code and complete authentication"
+              exit 1
+            }
+            echo ""
+            echo "✅ Authentication successful via device login!"
+          fi
 
       - name: Deploy Assets
         run: |
