Update to use API version 64+ and latest Salesforce CLI
- Update pull-assets.sh manifest generation to use API version 64.0 (was 60.0)
- Update flows Route_Merchant_to_Queue and Route_to_Merchant_Support_Agent to API 64.0 (was 63.0)
- Update GitHub Actions workflow to install latest CLI (@salesforce/cli@latest)
- Add CLI version check reminder in pull-assets.sh
- sfdx-project.json already uses 64.0

--- a/.github/workflows/deploy-with-login.yml
+++ b/.github/workflows/deploy-with-login.yml
@@ -55,11 +55,12 @@ jobs:
             fi
             
             echo ""
-            echo "[$(date '+%Y-%m-%d %H:%M:%S')] Installing Salesforce CLI via npm..."
+            echo "[$(date '+%Y-%m-%d %H:%M:%S')] Installing latest Salesforce CLI via npm..."
             echo "npm prefix: $(npm config get prefix)"
             echo "npm cache: $(npm config get cache)"
             
-            npm install -g @salesforce/cli || {
+            # Install latest Salesforce CLI
+            npm install -g @salesforce/cli@latest || {
               echo "[$(date '+%Y-%m-%d %H:%M:%S')] ❌ Failed to install Salesforce CLI"
               echo "[$(date '+%Y-%m-%d %H:%M:%S')] Trying alternative installation method..."
               # Alternative: use npm with --force or try different approach
